--- a/Makefile.common
+++ b/Makefile.common
@@ -252,9 +252,9 @@ LIBNAME   := $($(os_arch)_LIBNAME)
 CRYPTOSTREAM_FLAGS := $($(os_arch)_CRYPTOSTREAM_FLAGS)
 
 
-CFLAGS := $(CFLAGS) -Ilib/include  
-CXXFLAGS := $(CXXFLAGS) -Ilib/include  
+CFLAGS := $(CFLAGS) -Ilib/include -I/usr/include -I"$(SRC_NATIVE)/com/intel/cryptostream"
+CXXFLAGS := $(CXXFLAGS) -Ilib/include  -I/usr/include
 ifneq ($(jni_include),)
-CFLAGS := $(CFLAGS) -I"$(jni_include)" -I$(TARGET)/jni-classes/com/intel/cryptostream/
-CXXFLAGS := $(CXXFLAGS) -I"$(jni_include)" -I$(TARGET)/jni-classes/com/intel/cryptostream/
+CFLAGS := $(CFLAGS) -I"$(jni_include)" -I"$(TARGET)/jni-classes/com/intel/cryptostream/" -I"$(TARGET)/jni-classes/com/intel/cryptostream/random"
+CXXFLAGS := $(CXXFLAGS) -I"$(jni_include)" -I"$(TARGET)/jni-classes/com/intel/cryptostream/" -I"$(TARGET)/jni-classes/com/intel/cryptostream/random"
 endif
